added helpful votes to vote entity